--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
                         <li><i class="fas fa-pencil-alt"></i> <a href="#">Blog</a></li>
                     </ul>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Id neque aliquam vestibulum morbi blandit. Nibh sit amet commodo
-                        nulla facilisi. Urna condimentum mattis pellentesque id nibh tortor id aliquet lectus. Quis
-                        blandit turpis cursus in hac habitasse.</p>
+                    <p>Results-driven sales and recruitment professional with over 13 years of experience in managing sales operations, quota management, and team leadership. Proven track record in exceeding targets, developing strategic insights, and driving business performance. Adept at building strong cross-functional relationships and leveraging data-driven recommendations to support decision-making processes.</p>
                 </header>
             </div>
 
