--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                         <div class="school">
                             <div class="upper-row">
-                                <h3 class="school-name">Github University</h3>
+                                <h3 class="school-name">University of San Francisco</h3>
                                 <div class="time">Graduation - Dec. 2025</div>
                             </div>
                             <div class="school-title">B.S. Computer Science, GPA 4.0 / 4.0</div>
