--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <h3 class="school-name">University of San Francisco</h3>
                                 <div class="time">Graduation - Dec. 2025</div>
                             </div>
-                            <div class="school-title">B.S. Computer Science, GPA 4.0 / 4.0</div>
+                            <div class="school-title">MBA, GPA 4.0 / 4.0</div>
 
                             <b>Relevant Coursework:</b> Software Engineering, Data Structures, Software Development,
                             Systems Programming, Mobile Software Development, Web Programming, Computer Architecture,
