--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <header>
                     <div class="profile">
                         <div class="picture">
-                            <img src="img/1575471965441.jpg" alt="John Doe">
+                            <img src="img/1575471965441.jpg" alt="Arturo Revelo">
                         </div>
                         <a class="btn btn-cv" href="#" role="button" download>
                             <i class="fas fa-file-alt"></i> Download Résumé
