--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
                         <span>Sales and Recruiting Professional</span>
                     </div>
                     <ul class="social">
-                        <li><i class="fas fa-envelope"></i> <span id="email"><a href="#">name@gmail.com</a></span></li>
-                        <li><i class="fab fa-github"></i> <a href="#">John Doe</a></li>
-                        <li><i class="fab fa-linkedin"></i> <a href="#">John Doe</a></li>
-                        <li><i class="fas fa-pencil-alt"></i> <a href="#">Blog</a></li>
+                        <li><i class="fas fa-envelope"></i> <span id="email"><a href="#">arturo.revelo@gmail.com</a></span></li>
+                        <li><i class="fab fa-github"></i> <a href="#">Camelx240</a></li>
+                        <li><i class="fab fa-linkedin"></i> <a href="#">https://www.linkedin.com/in/arturo-revelo/</a></li>
                     </ul>
 
                     <p>Results-driven sales and recruitment professional with over 13 years of experience in managing sales operations, quota management, and team leadership. Proven track record in exceeding targets, developing strategic insights, and driving business performance. Adept at building strong cross-functional relationships and leveraging data-driven recommendations to support decision-making processes.</p>
