--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <ul class="social">
                         <li><i class="fas fa-envelope"></i> <span id="email"><a href="#">arturo.revelo@gmail.com</a></span></li>
                         <li><i class="fab fa-github"></i> <a href="#">Camelx240</a></li>
-                        <li><i class="fab fa-linkedin"></i> <a href="#">https://www.linkedin.com/in/arturo-revelo/</a></li>
+                        <li><i class="fab fa-linkedin"></i> <a href="#">arturo-revelo/</a></li>
                     </ul>
 
                     <p>Results-driven sales and recruitment professional with over 13 years of experience in managing sales operations, quota management, and team leadership. Proven track record in exceeding targets, developing strategic insights, and driving business performance. Adept at building strong cross-functional relationships and leveraging data-driven recommendations to support decision-making processes.</p>
@@ -68,9 +68,7 @@
                             </div>
                             <div class="school-title">MBA, GPA 4.0 / 4.0</div>
 
-                            <b>Relevant Coursework:</b> Software Engineering, Data Structures, Software Development,
-                            Systems Programming, Mobile Software Development, Web Programming, Computer Architecture,
-                            Computer Networks, Discrete Math
+                            <b>Relevant Coursework:</b> Enterprise Software Development, Entrepreneurial Marketing, Analytics, and Sales
                         </div>
                     </section>
 
@@ -80,11 +78,10 @@
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
                             </span>
-                            Technical Skills:
+                            Skills:
                         </h2>
-                        <b>Languages:</b> Java, Python, C++, PHP, JavaScript, CSS, HTML<br>
-                        <b>Technologies:</b> Unix, Git, AWS, Android Studio, Docker, Django, MATLAB, Jupyter
-                        Notebook<br>
+                        <b>Soft Skills:</b> Emotional Intelligence • Public Speaking • Presentation Skills • Verbal and Written Communication • Time Management • Collaboration/Diversity and Inclusion • Customer Satisfaction • Agile Thinker • Fluent Spanish<br>
+                        <b>Technical Skills:</b> Advanced Sales/Closing Methodology • Proficient in Salesforce / Outreach / LinkedIn / Lever • Strategic Initiative and Planning • SQL • SWOT Market Analysis for Forecasting • Online Media • • Pipeline Development • Business Development / Business Acumen • Data Mining and Research • Product Insight Presentation • HTML • Python <br>
                     </section>
 
                     <section>
