EQX Job Experience

--- a/index.html
+++ b/index.html
@@ -94,18 +94,19 @@
                         </h2>
                         <div class="job">
                             <div class="upper-row">
-                                <h3 class="company">Google / Mountain View, CA</h3>
-                                <div class="time">Apr. 2020 – Present</div>
+                                <h3 class="company">Equinox / San Francisco, CA</h3>
+                                <div class="time">Oct. 2023 – Present</div>
                             </div>
-                            <div class="job-title">Software Engineer</div>
+                            <div class="job-title">Membership Advisor</div>
 
                             <ul>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua
+                                <li> •   Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:
                                 </li>
-                                <li>Urna condimentum mattis pellentesque
-                                    id nibh tortor id aliquet lectus. Quis blandit turpis cursus in hac habitasse
+                                    <li> o   Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
                                 </li>
+                                    <li> o   Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
+                                </li>
+                                    <li> o   Demonstrated skills: Strategic planning, innovative thinking, market analysis.
                             </ul>
                         </div>
 
