--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                             <ul>
                                 <li> •   Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:
                                 </li>
-                                    <li> o   Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
+                                    <li> Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
                                 </li>
-                                    <li> o   Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
+                                    <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
                                 </li>
-                                    <li> o   Demonstrated skills: Strategic planning, innovative thinking, market analysis.
+                                    <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
                             </ul>
                         </div>
 
