--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                             <div class="job-title">Membership Advisor</div>
 
                             <ul>
-                                <li> •   Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:
-                                </li>
+                                <li> Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:
+                                    </li>
                                     <li> Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
-                                </li>
+                                    </li>
                                     <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
-                                </li>
+                                    </li>
                                     <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
                             </ul>
                         </div>
