--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <ul>
                                 <li> Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:
                                     </li>
-                                        <li> Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
+                                        <li><span>Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.</span> 
                                     </li>
                                         <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
                                     </li>
