--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             Skills:
                         </h2>
                         <b>Soft Skills:</b> Emotional Intelligence • Public Speaking • Presentation Skills • Verbal and Written Communication • Time Management • Collaboration/Diversity and Inclusion • Customer Satisfaction • Agile Thinker • Fluent Spanish<br>
-                        <b>Technical Skills:</b> Advanced Sales/Closing Methodology • Proficient in Salesforce / Outreach / LinkedIn / Lever • Strategic Initiative and Planning • SQL • SWOT Market Analysis for Forecasting • Online Media • • Pipeline Development • Business Development / Business Acumen • Data Mining and Research • Product Insight Presentation • HTML • Python <br>
+                        <b>Technical Skills:</b> Advanced Sales/Closing Methodology • Proficient in Salesforce / Outreach / LinkedIn / Lever • Strategic Initiative and Planning • SQL • SWOT Market Analysis for Forecasting • Online Media • Pipeline Development • Business Development / Business Acumen • Data Mining and Research • Product Insight Presentation • HTML • Python <br>
                     </section>
 
                     <section>
@@ -98,11 +98,11 @@
                                 <div class="time">Oct. 2023 – Present</div>
                             </div>
                             <div class="job-title">Membership Advisor</div>
-
+                            <div class="job-title">Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:</div>
                             <ul>
                                 <li> Surpassed Sales Targets and Drove Revenue Growth with Innovative Prospecting:
                                     </li>
-                                        <li><span>Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.</span> 
+                                        <li> Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
                                     </li>
                                         <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
                                     </li>
