--- a/index.html
+++ b/index.html
@@ -110,33 +110,33 @@
 
                         <div class="job">
                             <div class="upper-row">
-                                <h3 class="company">Amazon / Seattle, WA</h3>
-                                <div class="time">Aug. 2018 – Mar. 2020</div>
+                                <h3 class="company">Astra / Sunnyvale, CA</h3>
+                                <div class="time">May. 2023 – Oct. 2023</div>
                             </div>
-                            <div class="job-title">Software Engineer</div>
-
+                            <div class="job-title">Technical Recruiter</div>
+                            <div class="job-title">Optimized Candidate Quality and Recruitment Efficiency:</div>
                             <ul>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua</li>
-                                <li>Justo eget magna fermentum iaculis eu non diam phasellus vestibulum lorem sed risus
-                                    ultricies tristique</li>
-                                <li>Ut tellus elementum sagittis vitae et leo duis ut diam quam nulla porttitor massa id
-                                    neque aliquam</li>
+                                <li>Implemented precision-targeted sourcing strategies, securing five pivotal placements and establishing a robust pipeline of top-tier candidates.
+                                    </li>
+                                        <li>Developed and maintained recruitment dashboards to ensure data integrity and provide regular performance reports to leadership.
+                                    </li>
+                                        <li>Achieved a 50% improvement in candidate match rates and a 20% reduction in time-to-hire.
                             </ul>
                         </div>
 
                         <div class="job">
                             <div class="upper-row">
-                                <h3 class="company">Microsoft / Redmond, WA</h3>
-                                <div class="time">May. 2015 – Aug. 2016</div>
+                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco / Mountain View, CA</h3>
+                                <div class="time">Jan. 2019 – May. 2023</div>
                             </div>
-                            <div class="job-title">Software Engineer</div>
-
+                            <div class="job-title">Command Trainer For Sales Analyst and Business Challenges</div>
+                            <div class="job-title">Revolutionized CRM Integration and Data Management:</div>
                             <ul>
-                                <li>Amet justo donec enim diam vulputate ut pharetra sit amet aliquam id diam maecenas
-                                    ultricies mi eget mauris</li>
-                                <li>Varius morbi enim nunc faucibus a pellentesque sit amet porttitor eget dolor morbi
-                                    non arcu risus</li>
+                                <li>Implemented precision-targeted sourcing strategies, securing five pivotal placements and establishing a robust pipeline of top-tier candidates.
+                                    </li>
+                                        <li>Developed and maintained recruitment dashboards to ensure data integrity and provide regular performance reports to leadership.
+                                    </li>
+                                        <li>Achieved a 50% improvement in candidate match rates and a 20% reduction in time-to-hire.
                             </ul>
                         </div>
 
