Major Job Experience Updates

--- a/index.html
+++ b/index.html
@@ -132,26 +132,80 @@
                             <div class="job-title">Command Trainer For Sales Analyst and Business Challenges</div>
                             <div class="job-title">Revolutionized CRM Integration and Data Management:</div>
                             <ul>
-                                <li>Implemented precision-targeted sourcing strategies, securing five pivotal placements and establishing a robust pipeline of top-tier candidates.
+                                <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.
                                     </li>
-                                        <li>Developed and maintained recruitment dashboards to ensure data integrity and provide regular performance reports to leadership.
+                                        <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.
                                     </li>
-                                        <li>Achieved a 50% improvement in candidate match rates and a 20% reduction in time-to-hire.
+                                        <li>Demonstrated skills: Project management, CRM integration, dashboard development.
+                            <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
+                            <ul>
+                                <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
+                                </li>
+                                <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.
+                                </li>
+                                <li>Demonstrated skills: Strategic analysis, market research, consulting.
                             </ul>
                         </div>
-
                         <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
-                                <h3 class="company">Apple / Cupertino, CA</h3>
-                                <div class="time">Jun. 2014 – Aug. 2014</div>
+                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco / Mountain View, CA</h3>
+                                <div class="time">Jan. 2020 – Jan. 2022</div>
                             </div>
-                            <div class="job-title">Intern</div>
-
+                            <div class="job-title">Talent Acquisition Team Lead</div>
+                            <div class="job-title">Innovatively Enhanced Recruitment Strategies:</div>
                             <ul>
-                                <li>A condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus
-                                    et malesuada fames ac turpis egestas sed</li>
+                                <li>Applied creative thinking to the recruitment process, resulting in a significant 33% surge in specialized placements in 2021.
+                                    </li>
+                                        <li>Managed the full lifecycle recruitment for over 400 candidates annually, maintaining an exceptional 98% on-time interview rate.
+                                    </li>
+                                        <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.
+                            <div class="job-title">Streamlined Recruitment Operations:</div>
+                            <ul>
+                                <li>Spearheaded operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.
+                                </li>
+                                <li>Ensured efficiency and accuracy in recruitment operations through a streamlined approach.
+                                </li>
+                                <li>Demonstrated skills: Operational leadership, process optimization, data management.
                             </ul>
                         </div>
+                        <div class="job" style="margin-bottom:-15px;">
+                            <div class="upper-row">
+                                <h3 class="company">US Navy Recruiting District Chicago	Chicago / Chicago, IL</h3>
+                                <div class="time">Jan. 2016 – Dec. 2019</div>
+                            </div>
+                            <div class="job-title">Talent Acquisition Team Lead</div>
+                            <div class="job-title">Strategically Led Recruitment Team and Enhanced Performance:</div>
+                            <ul>
+                                <li>Orchestrated leadership for a team of 26 recruiters, surpassing targets by 150%.
+                                    </li>
+                                        <li>Identified strengths and development areas, optimizing team performance.
+                                    </li>
+                                        <li>Demonstrated skills: Leadership, strategic planning, performance analysis.
+                            <div class="job-title">Implemented Diverse Recruiting Methods and Provided Data-Driven Insights:</div>
+                            <ul>
+                                <li>Implemented various recruiting methods, resulting in a 30% increase in candidate quality.
+                                </li>
+                                <li>Provided data-driven insights to advise leadership, enabling informed decision-making.
+                                </li>
+                                <li>Demonstrated skills: Innovative thinking, data analysis, strategic decision support.
+                            </ul>
+                        </div>
+                        <div class="job" style="margin-bottom:-15px;">
+                            <div class="upper-row">
+                                <h3 class="company">US Navy Recruiting District San Francisco / San Mateo, CA</h3>
+                                <div class="time">Feb. 2011 – Dec. 2015</div>
+                            </div>
+                            <div class="job-title">Technical Recruiter</div>
+                            <div class="job-title">Strategic Recruitment Planning and Execution:</div>
+                            <ul>
+                                <li>Surpassed recruitment goals by 125% through strategic advertising, marketing strategies, and performance management initiatives.
+                                    </li>
+                                        <li>Drove the strategic conception and execution of 10 advertising campaigns, resulting in a 40% increase in ROI and 30 placements within 10 months.
+                                        </li>
+                                            <li>Demonstrated skills: Strategic planning, advertising, marketing, performance management.
+                            <ul>
+                        </div>
+
                     </section>
 
                     <section>
