--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
                         <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
-                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco / Mountain View, CA</h3>
+                                <h3 class="company">US Navy Talent Acquisition Group (NTAG) / Mountain View, CA</h3>
                                 <div class="time">Jan. 2020 – Jan. 2022</div>
                             </div>
                             <div class="job-title">Talent Acquisition Team Lead</div>
@@ -159,7 +159,7 @@
                                         <li>Managed the full lifecycle recruitment for over 400 candidates annually, maintaining an exceptional 98% on-time interview rate.
                                     </li>
                                         <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.
-                            <div class="job-title">Streamlined Recruitment Operations:</div>
+                            <div>Streamlined Recruitment Operations:</div>
                             <ul>
                                 <li>Spearheaded operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.
                                 </li>
