--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                         <li>Managed the full lifecycle recruitment for over 400 candidates annually, maintaining an exceptional 98% on-time interview rate.
                                     </li>
                                         <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.
-                            <div>Streamlined Recruitment Operations:</div>
+                            <div class="job-title">Streamlined Recruitment Operations:</div>
                             <ul>
                                 <li>Spearheaded operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.
                                 </li>
@@ -219,33 +219,14 @@
 
                         <div class="job">
                             <div class="upper-row">
-                                <h3 class="company">Roommates Shopping App</h3>
-                                <div class="time">Apr. 2020</div>
+                                <h3 class="company">Salesforce CRM Migration</h3>
+                                <div class="time">Feb. 2020</div>
                             </div>
 
                             <ul>
-                                <li>Sed risus pretium quam vulputate. Nulla facilisi etiam dignissim diam. Sociis
-                                    natoque penatibus et magnis dis parturient</li>
-                                <li>Ac auctor augue mauris augue neque gravida in fermentum et. Malesuada bibendum arcu
-                                    vitae elementum curabitur vitae nunc sed velit
-                                </li>
-                                <li>A iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Ultricies mi
-                                    eget mauris pharetra et ultrices neque ornare</li>
+                                <li>The project involved migrating a standalone CRM to a cloud-based Salesforce CRM and digitally transforming physical processes. This included developing enterprise-wide processes, SOPs, prospecting cadences, dashboards, and strategic list building for recruitment efforts. I worked with Salesforce representatives to build the new CRM system for Navy Recruiting in Northern California, involving over 250 recruiting personnel.</li>
                             </ul>
-                        </div>
 
-                        <div class="job" style="margin-bottom:-15px;">
-                            <div class="upper-row">
-                                <h3 class="company">Personal Website CMS</h3>
-                                <div class="time">May. 2011 – Aug. 2014</div>
-                            </div>
-                            <ul>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua</li>
-                                <li>Organized activities and created Minecraft Java Modding tutorials.</li>
-                                <li>Developed a Minecraft MOD for textures with over ten-thousand downloads during the
-                                    year of 2012 using Java, ModLoader API, and MCP.</li>
-                            </ul>
                         </div>
                     </section>
 
@@ -257,25 +238,15 @@
                             </span>
                             Honors & Awards
                         </h2>
-                        <h3><abbr title="Association for Computing Machinery">ACM</abbr></h3>
+                        <h3><abbr title="Association for Computing Machinery">Production Awards</abbr></h3>
                         <ul>
-                            <li>Coding Competition: 1st Place - Spring 2019</li>
+                            <li>Talent Acquisition Team Lead of the Year FY21 - San Francisco, CA</li>
+                            <li>Talent Acquisition Team Lead of the Year FY17 - Chicago, IL</li>
+                            <li>Technical Recruiter of the Year FY15 - San Mateo, CA</li>
                         </ul>
-                        <h3>Academic Awards</h3>
+                        <h3>Other Awards</h3>
                         <ul>
-                            <li>Computer Science Student of the Year - 2016</li>
-                            <li>“A” Team Award - 2014-15</li>
-                            <li>Math Student of the Year - 2014-15</li>
-                            <li>Information Technology Student of the Year - 2014-15</li>
-                        </ul>
-
-                        <h3><abbr title="Future Business Leaders of America">FBLA</abbr></h3>
-                        <ul style="margin-bottom:-5px;">
-                            <li>Graphic Design (Regional): 1st Place - 2016</li>
-                            <li>Website Design (Regional & State): 1st Place - 2015</li>
-                            <li>Digital Design & Promotion (Regional & State): 1nd Place - 2015</li>
-                            <li>E-Business Award (State): 1st Place - 2014</li>
-                            <li>Digital Design (Regional): 1nd Place - 2014</li>
+                            <li>Military Outstanding Volunteer Service Medal - US Navy – 2010</li>
                         </ul>
                     </section>
 
