--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <ul class="social">
                         <li><i class="fas fa-envelope"></i> <span id="email"><a href="mailto:arturo.revelo@gmail.com">arturo.revelo@gmail.com</a></span></li>
-                        <li><i class="fab fa-github"></i> <a href="#">Camelx240</a></li>
+                        <li><i class="fab fa-github"></i> <a href="https://github.com/Camelx240" target="_blank">Camelx240</a></li>
                         <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/arturo-revelo/">arturo-revelo</a></li>
                     </ul>
 
