--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 </ul>
                             </div>
                             <div class="job-details">
-                                <h3>Drove Sales Growth Through Strategic Analysis:</h3>
+                                <h3 Drove Sales Growth Through Strategic Analysis:</h3>
                                 <ul>
                                     <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
                                     <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.
