--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
                                     <li>Demonstrated skills: Project management, CRM integration, dashboard development.</li>
                                 </ul>
                             </div>
-                            <div class="job-details">
-                                <h3> Drove Sales Growth Through Strategic Analysis:</h3>
+                            <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
                                 <ul>
                                     <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
                                     <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.
