--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <ul class="social">
                         <li><i class="fas fa-envelope"></i> <span id="email"><a href="mailto:arturo.revelo@gmail.com">arturo.revelo@gmail.com</a></span></li>
-                        <li><i class="fab fa-github"></i> <a href="https://github.com/Camelx240" target="_blank">Camelx240</a></li>
+                        <li><i class="fab fa-github"></i> <a href="#">Camelx240</a></li>
                         <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/arturo-revelo/">arturo-revelo</a></li>
                     </ul>
 
@@ -131,17 +131,17 @@
                             </div>
                             <div class="job-title">Command Trainer For Sales Analyst and Business Challenges</div>
                             <div class="job-title">Revolutionized CRM Integration and Data Management:</div>
-                                <ul>
-                                    <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.</li>
-                                    <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.</li>
-                                    <li>Demonstrated skills: Project management, CRM integration, dashboard development.</li>
-                                </ul>
-                            </div>
-                            <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
-                                <ul>
-                                    <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
-                                    <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.
-                                    <li>Demonstrated skills: Strategic analysis, market research, consulting.
+                            <ul>
+                                <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.</li>
+                                <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.</li>
+                                <li>Demonstrated skills: Project management, CRM integration, dashboard development.</li>
+                            </ul>
+                        </div>
+                        <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
+                            <ul>
+                                <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.</li>
+                                <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.</li>
+                                <li>Demonstrated skills: Strategic analysis, market research, consulting.</li>
                             </ul>
                         </div>
                         <div class="job" style="margin-bottom:-15px;">
