--- a/index.html
+++ b/index.html
@@ -130,15 +130,14 @@
                                 <div class="time">Jan. 2019 – May. 2023</div>
                             </div>
                             <div class="job-title">Command Trainer For Sales Analyst and Business Challenges</div>
-                            <h3>Revolutionized CRM Integration and Data Management:</h3>
+                            <div class="job-title">Revolutionized CRM Integration and Data Management:</div>
                             <ul>
                                 <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.</li>
                                 <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.</li>
                                 <li>Demonstrated skills: Project management, CRM integration, dashboard development.</li>
                             </ul>
                         </div>
-                        <div class="job-details">
-                            <h3>Drove Sales Growth Through Strategic Analysis:</h3>
+                        <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
                             <ul>
                                 <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.</li>
                                 <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.</li>
