--- a/index.html
+++ b/index.html
@@ -132,16 +132,18 @@
                             <div class="job-title">Command Trainer For Sales Analyst and Business Challenges</div>
                             <div class="job-title">Revolutionized CRM Integration and Data Management:</div>
                             <ul>
-                                <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.</li>
-                                <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.</li>
-                                <li>Demonstrated skills: Project management, CRM integration, dashboard development.</li>
-                            </ul>
-                        </div>
-                        <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
+                                <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.
+                                    </li>
+                                        <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.
+                                    </li>
+                                        <li>Demonstrated skills: Project management, CRM integration, dashboard development.
+                            <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
                             <ul>
-                                <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.</li>
-                                <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.</li>
-                                <li>Demonstrated skills: Strategic analysis, market research, consulting.</li>
+                                <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
+                                </li>
+                                <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.
+                                </li>
+                                <li>Demonstrated skills: Strategic analysis, market research, consulting.
                             </ul>
                         </div>
                         <div class="job" style="margin-bottom:-15px;">
