--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                                 <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.
                                 <li>Demonstrated skills: Project management, CRM integration, dashboard development.
                             <ul>
+                                <div class="job-details">
+                                    <h4>Drove Sales Growth Through Strategic Analysis:</h4> 
                             <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
                             <ul>
                                 <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
