--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                                 <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.
                                 <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.
                                 <li>Demonstrated skills: Project management, CRM integration, dashboard development.
-                            <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
+                                    <div class="job-details">
+                                        <h4>Drove Sales Growth Through Strategic Analysis:</h4>
                             <ul>
                                 <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
                                 <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.
