--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
                                 <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.
                                 <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.
                                 <li>Demonstrated skills: Project management, CRM integration, dashboard development.
+                                    <h3 class="job-title">Revolutionized CRM Integration and Data Management:</h3>
+                                    <ul>
+                                        <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.</li>
+                                        <li>Resulted in a 15% increase in hiring manager satisfaction and customized metrics for over 200 NTAG personnel.</li>
+                                        <li>Demonstrated skills: Project management, CRM integration, dashboard development.</li>
+                                    </ul>
+                                    <h3 class="job-title">Drove Sales Growth Through Strategic Analysis:</h3>
+                                    <ul>
+                                        <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.</li>
+                                        <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.</li>
+                                        <li>Demonstrated skills: Strategic analysis, market research, consulting.</li>
+                                    </ul>        
                             <div class="job-title">Drove Sales Growth Through Strategic Analysis:</div>
                             <ul>
                                 <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.
