--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
                                         <li>Managed the full lifecycle recruitment for over 400 candidates annually, maintaining an exceptional 98% on-time interview rate.
                                     </li>
                                         <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.
+                                            <h3 class="job-title">Talent Acquisition Team Lead</h3>
+                                            <h3 class="job-title">Innovatively Enhanced Recruitment Strategies:</h3>
+                                            <ul>
+                                                <li>Applied creative thinking to the recruitment process, resulting in a significant 33% surge in specialized placements in 2021.</li>
+                                                <li>Managed the full lifecycle recruitment for over 400 candidates annually, maintaining an exceptional 98% on-time interview rate.</li>
+                                                <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.</li>
+                                            </ul>
+                                            <h3 class="job-title">Streamlined Recruitment Operations:</h3>
+                                            <ul>
+                                                <li>Spearheaded operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.</li>
+                                                <li>Ensured efficiency and accuracy in recruitment operations through a streamlined approach.</li>
+                                                <li>Demonstrated skills: Operational leadership, process optimization, data management.</li>
                             <div class="job-title">Streamlined Recruitment Operations:</div>
                             <ul>
                                 <li>Spearheaded operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.
