--- a/index.html
+++ b/index.html
@@ -176,6 +176,17 @@
                                         <li>Identified strengths and development areas, optimizing team performance.
                                     </li>
                                         <li>Demonstrated skills: Leadership, strategic planning, performance analysis.
+                                            <h3 class="job-title">Strategically Led Recruitment Team and Enhanced Performance:</h3>
+                                            <ul>
+                                                <li>Orchestrated leadership for a team of 26 recruiters, surpassing targets by 150%.</li>
+                                                <li>Identified strengths and development areas, optimizing team performance.</li>
+                                                <li>Demonstrated skills: Leadership, strategic planning, performance analysis.</li>
+                                            </ul>
+                                            <h3 class="job-title">Implemented Diverse Recruiting Methods and Provided Data-Driven Insights:</h3>
+                                            <ul>
+                                                <li>Implemented various recruiting methods, resulting in a 30% increase in candidate quality.</li>
+                                                <li>Provided data-driven insights to advise leadership, enabling informed decision-making.</li>
+                                                <li>Demonstrated skills: Innovative thinking, data analysis, strategic decision support.</li>
                             <div class="job-title">Implemented Diverse Recruiting Methods and Provided Data-Driven Insights:</div>
                             <ul>
                                 <li>Implemented various recruiting methods, resulting in a 30% increase in candidate quality.
