--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                                         <li>Conducted thorough hiring needs analysis and market research, providing sales and marketing consulting to C-level stakeholders.</li>
                                         <li>Resulted in a 30% sales increase and achieving #1 of 26 teams nationally in 2023.</li>
                                         <li>Demonstrated skills: Strategic analysis, market research, consulting.</li>
+                                    </ul>
+                                </div>
 
                             <div class="job-title"></div>
                         </div>
@@ -161,8 +163,9 @@
                                                 <li>Spearheaded operational processes for the recruitment team, including developing data checks and recruitment metric maintenance.</li>
                                                 <li>Ensured efficiency and accuracy in recruitment operations through a streamlined approach.</li>
                                                 <li>Demonstrated skills: Operational leadership, process optimization, data management.</li>
-
+                            </ul>
                         </div>
+
                         <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
                                 <h3 class="company">US Navy Recruiting District Chicago	Chicago / Chicago, IL</h3>
@@ -182,6 +185,7 @@
                                                 <li>Demonstrated skills: Innovative thinking, data analysis, strategic decision support.</li>
                             </ul>
                         </div>
+                        
                         <div class="job" style="margin-bottom:-15px;">
                             <div class="upper-row">
                                 <h3 class="company">US Navy Recruiting District San Francisco / San Mateo, CA</h3>
