--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             </div>
 
                             <ul>
-                                <li>The project involved migrating a standalone CRM to a cloud-based Salesforce CRM and digitally transforming physical processes. This included developing enterprise-wide processes, SOPs, prospecting cadences, dashboards, and strategic list building for recruitment efforts. I worked with Salesforce representatives to build the new CRM system for Navy Recruiting in Northern California, involving over 250 recruiting personnel.</li>
+                                <li>Led the successful migration of a legacy standalone CRM to a cutting-edge cloud-based Salesforce CRM, driving the digital transformation initiative for Navy Recruiting in Northern California. Orchestrated the development of enterprise-wide processes, Standard Operating Procedures (SOPs), prospecting cadences, dashboards, and strategic list-building initiatives, while overseeing a team of over 250 recruiting personnel. Resulted in a remarkable 40% increase in recruitment efficiency, a 50% reduction in data processing time, and a notable 25% improvement in lead conversion rates. Demonstrated exceptional project management, CRM development, process optimization, collaborative prowess, and strategic planning acumen.</li>
                             </ul>
 
                         </div>
