--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <h3 class="company">US Navy Talent Acquisition Group (NTAG) San Francisco / Mountain View, CA</h3>
                                 <div class="time">Jan. 2019 – May. 2023</div>
                             </div>
-                            <div class="job-title">Command Trainer For Sales Analyst and Business Challenges</div>
+                            <div class="job-title">Command Trainer For Sales and Business Challenges</div>
                                     <h3 class="job-title">Revolutionized CRM Integration and Data Management:</h3>
                                     <ul>
                                         <li>Led the seamless integration of Salesforce CRM and developed recruitment dashboards.</li>
@@ -155,7 +155,7 @@
                                             <h3 class="job-title">Innovatively Enhanced Recruitment Strategies:</h3>
                                             <ul>
                                                 <li>Applied creative thinking to the recruitment process, resulting in a significant 33% surge in specialized placements in 2021.</li>
-                                                <li>Managed the full lifecycle recruitment for over 400 candidates annually, maintaining an exceptional 98% on-time interview rate.</li>
+                                                <li>Managed the full lifecycle recruitment for over 400 candidates annually in the medical, engeneering and other highly skilled fields, maintaining an exceptional 65% closing rate of qualified candidates.</li>
                                                 <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.</li>
                                             </ul>
                                             <h3 class="job-title">Streamlined Recruitment Operations:</h3>
