--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                             <h3 class="job-title">Innovatively Enhanced Recruitment Strategies:</h3>
                                             <ul>
                                                 <li>Applied creative thinking to the recruitment process, resulting in a significant 33% surge in specialized placements in 2021.</li>
-                                                <li>Managed the full lifecycle recruitment for over 400 candidates annually in the medical, engeneering and other highly skilled fields, maintaining an exceptional 65% closing rate of qualified candidates.</li>
+                                                <li>Managed the full lifecycle recruitment for over 400 candidates annually in the medical, engineering and other highly skilled fields, maintaining an exceptional 65% closing rate of qualified candidates.</li>
                                                 <li>Demonstrated skills: Creative problem-solving, recruitment management, time management.</li>
                                             </ul>
                                             <h3 class="job-title">Streamlined Recruitment Operations:</h3>
