--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </div>
                             <div class="school-title">MBA, GPA 4.0 / 4.0</div>
 
-                            <b>Relevant Coursework:</b> Enterprise Software Development, Entrepreneurial Marketing, Analytics, and Sales
+                            <b>Relevant Coursework:</b> Enterprise Software Development, Entrepreneurial Marketing, Analytics, and Salesg
                         </div>
                     </section>
 
