--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/arturo-revelo/">arturo-revelo</a></li>
                     </ul>
 
-                    <p>Results-driven sales and recruitment professional with over 13 years of experience in managing sales operations, quota management, and team leadership. Proven track record in exceeding targets, developing strategic insights, and driving business performance. Adept at building strong cross-functional relationships and leveraging data-driven recommendations to support decision-making processes.</p>
+                    <p>Analytical, detail-oriented, and results-driven sales and recruitment professional with demonstrated experience guiding sales operations, managing quotas, and leading diverse, cross-functional teams. Proven track record of exceeding revenue and volume targets, increasing market share, and improving profit margins through strategic insights and data-driven recommendations. Adept at fostering mutually-beneficial relationships and leveraging in-depth market analysis to support long-term planning, forecasting, and budgeting. Seeking roles related to sales, recruitment, and business development and analysis.</p>
                 </header>
             </div>
 
@@ -68,7 +68,7 @@
                             </div>
                             <div class="school-title">MBA, GPA 4.0 / 4.0</div>
 
-                            <b>Relevant Coursework:</b> Enterprise Software Development, Entrepreneurial Marketing, Analytics, and Salesg
+                            <b>Relevant Coursework:</b> Enterprise Software Development, Entrepreneurial Marketing, Analytics, and Sales
                         </div>
                     </section>
 
