--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
                                         <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
                                     </li>
                                         <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
+                                            <li>  Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
+                                            </li>
+                                                <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
+                                            </li>
+                                                <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
+                                                    <li>  Exceeded monthly and quarterly quota targets, leading to a remarkable 40% expansion of the client base and a substantial 30% increase in revenue.
+                                                    </li>
+                                                        <li> Pioneered groundbreaking prospecting methods, resulting in enhanced market penetration and increased sales revenue.
+                                                    </li>
+                                                        <li> Demonstrated skills: Strategic planning, innovative thinking, market analysis.
                             </ul>
                         </div>
 
